force-app/main/default/objects/Case/fields/PMC_SS_ContractAmendmentJustificationVal__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_ContractAmendmentJustificationVal__c</fullName>
    <description>This field is to indicate the Contract Amendment Justification</description>
    <label>Contract Amendment Justification</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>PMC_SS_ContractAmendmentType__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Commercial Input Error</fullName>
            </value>
            <value>
                <fullName>Customer Request</fullName>
            </value>
            <value>
                <fullName>Manufacturing Capacity Restriction</fullName>
            </value>
            <value>
                <fullName>Quality Restriction</fullName>
            </value>
            <value>
                <fullName>Raw Material / Product Restriction</fullName>
            </value>
            <value>
                <fullName>Truck Restriction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>