force-app/main/default/objects/Case/fields/PMC_SS_ContractAmendmentType__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_ContractAmendmentType__c</fullName>
    <description>This field is to indicate the Contract Amendment Type</description>
    <label>Contract Amendment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agent Code</fullName>
            </value>
            <value>
                <fullName>Agent’s Commission</fullName>
            </value>
            <value>
                <fullName>Contract End Date</fullName>
            </value>
            <value>
                <fullName>Contract Start Date</fullName>
            </value>
            <value>
                <fullName>Culture Exchange</fullName>
                <label>Culture</label>
            </value>
            <value>
                <fullName>Due Date</fullName>
            </value>
            <value>
                <fullName>Freight Cost</fullName>
            </value>
            <value>
                <fullName>Incoterm</fullName>
            </value>
            <value>
                <fullName>Packing</fullName>
            </value>
            <value>
                <fullName>Plant/Origin</fullName>
            </value>
            <value>
                <fullName>Price List</fullName>
            </value>
            <value>
                <fullName>Product Exchange</fullName>
                <label>Product Exchange;(Different Composition)</label>
            </value>
            <value>
                <fullName>Sales Office</fullName>
            </value>
            <value>
                <fullName>Ship To</fullName>
            </value>
            <value>
                <fullName>Unit Price</fullName>
            </value>
            <value>
                <fullName>Volume Change</fullName>
            </value>
            <value>
                <fullName>Payment Terms</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>