force-app/main/default/objects/Case/fields/PMC_SS_ContractCancellation__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_ContractCancellation__c</fullName>
    <label>Contract Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancellation Due to Customer Death</fullName>
            </value>
            <value>
                <fullName>Commercial Input Error</fullName>
            </value>
            <value>
                <fullName>Contract Inactivation</fullName>
            </value>
            <value>
                <fullName>Customer Cancellation</fullName>
            </value>
            <value>
                <fullName>Expired Contract without Payment</fullName>
            </value>
            <value>
                <fullName>Insufficient Loading Balance</fullName>
            </value>
            <value>
                <fullName>Mosaic’s Failure</fullName>
            </value>
            <value>
                <fullName>No Digital Signature &gt; 15 Days</fullName>
            </value>
            <value>
                <fullName>Rejection via Workflow</fullName>
            </value>
            <value>
                <fullName>Unapproved Credit Limit</fullName>
            </value>
            <value>
                <fullName>Volume Reduction Due to Agronomic Adjustment</fullName>
            </value>
            <value>
                <fullName>Balance Return to Master Contract</fullName>
                <isActive>false</isActive>
                <label>Balance Return to Master Contract</label>
            </value>
            <value>
                <fullName>No Physical Signature &gt; 40 Days</fullName>
                <isActive>false</isActive>
                <label>No Physical Signature &gt; 40 Days</label>
            </value>
            <value>
                <fullName>Unpaid Expired Contracts &gt; 15 Days</fullName>
                <isActive>false</isActive>
                <label>Unpaid Expired Contracts &gt; 15 Days</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>