force-app/main/default/objects/Case/fields/PMC_SS_ContractCancellationSubReason__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_ContractCancellationSubReason__c</fullName>
    <label>Contract Cancellation Sub Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>PMC_SS_ContractCancellation__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Factory Problems</fullName>
            </value>
            <value>
                <fullName>Lack of Raw Materials</fullName>
            </value>
            <value>
                <fullName>Logistic Problems</fullName>
            </value>
            <value>
                <fullName>Quality Problems</fullName>
            </value>
            <value>
                <fullName>Unreleased Credit - Constitution of Guarantee</fullName>
            </value>
            <value>
                <fullName>Unreleased Credit - Delinquency</fullName>
            </value>
            <value>
                <fullName>Unreleased Credit - Surety</fullName>
            </value>
            <value>
                <fullName>Unreleased Credit - Unauthorized term</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>