force-app/main/default/objects/Case/fields/PMC_SS_CorrectedWeight__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_CorrectedWeight__c</fullName>
    <description>Field displayed when Issue Reason selected is &apos;Weight Discrepancy&apos; or &apos;Missing Cargo&apos; to input the corrected weight of the product.</description>
    <label>Corrected Weight</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>