force-app/main/default/objects/Case/fields/PMC_SS_CostCenter__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_CostCenter__c</fullName>
    <label>Cost Center</label>
    <type>TextArea</type>
</CustomField>