force-app/main/default/objects/Case/fields/PMC_SS_CostPerDay__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_CostPerDay__c</fullName>
    <description>Field displayed when Issue Reason selected is &quot;Demurrage&quot; to enter the cost per day for the demurrage.</description>
    <label>Cost Per Day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>