force-app/main/default/objects/Case/fields/PMC_SS_CreditDebitAmount__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_CreditDebitAmount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Credit/Debit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>