force-app/main/default/objects/Case/fields/PMC_SS_CreditMemoNumber__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_CreditMemoNumber__c</fullName>
    <label>Credit Memo Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>