force-app/main/default/objects/Case/fields/PMC_SS_CurrentDestinationLocation__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_CurrentDestinationLocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Location Object displayed when Issue Reason selected is &quot;Incorrect Destination&quot; or &quot;Diversion&quot;. User must select either Current Destination (Location) or Current Destination (Ship To) but cannot select both.</description>
    <label>Current Destination(Location)</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Cases (Current Destination(Location))</relationshipLabel>
    <relationshipName>Cases4</relationshipName>
    <type>Lookup</type>
</CustomField>