force-app/main/default/objects/Case/fields/PMC_SS_CurrentDestinationShipTo__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_CurrentDestinationShipTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Account Object displayed when Issue Reason selected is &quot;Incorrect Destination&quot; or &quot;Diversion&quot;. User must select either Current Destination (Location) or Current Destination (Ship To) but cannot select both.</description>
    <label>Current Destination(Ship To)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (Current Destination(Ship To))</relationshipLabel>
    <relationshipName>Cases3</relationshipName>
    <type>Lookup</type>
</CustomField>