force-app/main/default/objects/Case/fields/PMC_SS_CurrentLocation__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_CurrentLocation__c</fullName>
    <description>Field displayed when Issue Reason selected is &apos;Equipment Failure&apos; to enter the current location of the equiptment failure.</description>
    <label>Current Location</label>
    <type>TextArea</type>
</CustomField>