force-app/main/default/objects/Case/fields/PMC_SS_CustomerCreditsDetail__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_CustomerCreditsDetail__c</fullName>
    <label>Customer Credits Detail</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Demurrage</fullName>
            </value>
            <value>
                <fullName>Quality Credit</fullName>
            </value>
            <value>
                <fullName>Service Credit</fullName>
            </value>
            <value>
                <fullName>Transportation Credit</fullName>
            </value>
            <value>
                <fullName>Warehouse Credit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>