force-app/main/default/objects/Case/fields/PMC_SS_CustomerCreditsLevel1__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_CustomerCreditsLevel1__c</fullName>
    <inlineHelpText>To total &apos;Customer Credits&apos; for Parent Quality and Non-Quality</inlineHelpText>
    <label>Customer Credits Level 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>