force-app/main/default/objects/Case/fields/PMC_SS_CustomerImpact__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_CustomerImpact__c</fullName>
    <description>Likely impact to Customer</description>
    <label>Customer Impact</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Impact to Customer’s Supply / Operations / Safety / Health</fullName>
            </value>
            <value>
                <fullName>Minor Impact to Customer’s Supply / Operations / Safety / Health</fullName>
            </value>
            <value>
                <fullName>Significant Impact to Customer’s Supply / Operations / Safety / Health</fullName>
            </value>
            <value>
                <fullName>Rejection / Loss of Cargo and/or Risk of Losing a Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>