force-app/main/default/objects/Case/fields/PMC_SS_CustomerImpacted__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_CustomerImpacted__c</fullName>
    <description>Select the most appropriate category to describe if the quality event has negatively impacted the customer experience</description>
    <label>Customer Impacted</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>