force-app/main/default/objects/Case/fields/PMC_SS_CustomerIncurredLevel2Cost__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_CustomerIncurredLevel2Cost__c</fullName>
    <inlineHelpText>To total &apos;Customer Incurred Cost&apos; for Child Quality and Non-Quality</inlineHelpText>
    <label>Customer Incurred Level 2 Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>