force-app/main/default/objects/Case/fields/PMC_SS_CustomerWaivedCostsDetails__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_CustomerWaivedCostsDetails__c</fullName>
    <label>Customer Waived Costs Details</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Demurrage</fullName>
            </value>
            <value>
                <fullName>Despatch</fullName>
            </value>
            <value>
                <fullName>Diversion Fee</fullName>
            </value>
            <value>
                <fullName>Reconsignment Fee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>