force-app/main/default/objects/Case/fields/PMC_SS_CustomerWaivedLevel2Cost__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_CustomerWaivedLevel2Cost__c</fullName>
    <inlineHelpText>To total &apos;Customer Waived Costs&apos; for Child Quality and Non-Quality</inlineHelpText>
    <label>Customer Waived Level 2 Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>