force-app/main/default/objects/Case/fields/PMC_SS_CustomerWaivedLevel3Cost__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_CustomerWaivedLevel3Cost__c</fullName>
    <label>Customer Waived Level 3 Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>