force-app/main/default/objects/Case/fields/PMC_SS_Date_Investigation_Sent_to_CS__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_Date_Investigation_Sent_to_CS__c</fullName>
    <label>Date Investigation Sent to CS</label>
    <type>Date</type>
</CustomField>