force-app/main/default/objects/Case/fields/PMC_SS_DateMosaicVisitedCustomer__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_DateMosaicVisitedCustomer__c</fullName>
    <label>Date Mosaic Visited Customer</label>
    <type>Date</type>
</CustomField>