force-app/main/default/objects/Case/fields/PMC_SS_DaysOfDemurrage_c__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_DaysOfDemurrage_c__c</fullName>
    <description>Field displayed when Issue Reason selected is &quot;Demurrage&quot; to enter the number of days of demurrage.</description>
    <label>Days of Demurrage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>