force-app/main/default/objects/Case/fields/PMC_SS_DebitAmount__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_DebitAmount__c</fullName>
    <label>Debit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>