force-app/main/default/objects/Case/fields/PMC_SS_Delivery__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_Delivery__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery</label>
    <referenceTo>Shipment</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>