force-app/main/default/objects/Case/fields/PMC_SS_Document__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_Document__c</fullName>
    <description>Select the document they want to request when Issue Reason &quot;Document Request&quot; is selected.</description>
    <label>Document</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BOL</fullName>
            </value>
            <value>
                <fullName>COA</fullName>
            </value>
            <value>
                <fullName>COO</fullName>
            </value>
            <value>
                <fullName>COW</fullName>
            </value>
            <value>
                <fullName>Data Sheet</fullName>
            </value>
            <value>
                <fullName>Hazmat Label</fullName>
            </value>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>SDS</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>