force-app/main/default/objects/Case/fields/PMC_SS_Easy_Checklist_Sent__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_Easy_Checklist_Sent__c</fullName>
    <label>Easy Checklist Sent?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>