force-app/main/default/objects/Case/fields/PMC_SS_EquipmentInspected__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_EquipmentInspected__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Toggle box checked when pertinent equipment (railcar, vessel, barge, truck) has been requested to be inspected</description>
    <label>Equipment Inspected?</label>
    <type>Checkbox</type>
</CustomField>