force-app/main/default/objects/Case/fields/PMC_SS_EvidenceConfirmed__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_EvidenceConfirmed__c</fullName>
    <label>Evidence Confirmed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>