force-app/main/default/objects/Case/fields/PMC_SS_FreightCost__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_FreightCost__c</fullName>
    <description>BRL</description>
    <label>Freight Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>