force-app/main/default/objects/Case/fields/PMC_SS_HyperLink__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_HyperLink__c</fullName>
    <defaultValue>$Label.PMC_SS_CaseCreate_FloriLink</defaultValue>
    <label>HyperLink</label>
    <type>Url</type>
</CustomField>