force-app/main/default/objects/Case/fields/PMC_SS_IncidentDate__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_IncidentDate__c</fullName>
    <description>Record the date of quality occurrence.</description>
    <label>Incident Date</label>
    <type>Date</type>
</CustomField>