force-app/main/default/objects/Case/fields/PMC_SS_IncidentFrequency__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_IncidentFrequency__c</fullName>
    <description>How often this Case has occurred with any customer in “recent history” (~2 years)</description>
    <label>Incident Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1st Occurrence</fullName>
            </value>
            <value>
                <fullName>2nd Occurrence</fullName>
            </value>
            <value>
                <fullName>More than 2 Occurrences</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>