force-app/main/default/objects/Case/fields/PMC_SS_IncidentProbability__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_IncidentProbability__c</fullName>
    <description>Likelihood that the Case will have an identified effect</description>
    <label>Incident Probability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Likely</fullName>
            </value>
            <value>
                <fullName>Likely</fullName>
            </value>
            <value>
                <fullName>Very Likely</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>