force-app/main/default/objects/Case/fields/PMC_SS_IncidentQuantity__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_IncidentQuantity__c</fullName>
    <description>Impact on Supply Tonnage</description>
    <label>Incident Quantity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0 – 100 tons</fullName>
            </value>
            <value>
                <fullName>101 – 1,000 tons</fullName>
            </value>
            <value>
                <fullName>1,001 – 3,000 tons</fullName>
            </value>
            <value>
                <fullName>Greater than 3,000 tons</fullName>
            </value>
            <value>
                <fullName>100 – 300 tons</fullName>
                <isActive>false</isActive>
                <label>100 – 300 tons</label>
            </value>
            <value>
                <fullName>1000 – 3000 tons</fullName>
                <isActive>false</isActive>
                <label>1000 – 3000 tons</label>
            </value>
            <value>
                <fullName>Greater than 3000 tons</fullName>
                <isActive>false</isActive>
                <label>Greater than 3000 tons</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>