force-app/main/default/objects/Case/fields/PMC_SS_IncidentSeverity__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_IncidentSeverity__c</fullName>
    <description>Estimated financial loss</description>
    <label>Incident Severity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>$0 - $1,000</fullName>
            </value>
            <value>
                <fullName>$1,001 - $5,000</fullName>
            </value>
            <value>
                <fullName>$5,001 - $15,000</fullName>
            </value>
            <value>
                <fullName>$15,001 - $25,000</fullName>
            </value>
            <value>
                <fullName>$25,001 - $50,000</fullName>
            </value>
            <value>
                <fullName>More than $50,000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>