force-app/main/default/objects/Case/fields/PMC_SS_IncidentTonsK1K2__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_IncidentTonsK1K2__c</fullName>
    <description>Enter portion of K1 shipments represented in Incident Quantity field as whole number percentage</description>
    <label>Incident Tons K1% / K2%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>