force-app/main/default/objects/Case/fields/PMC_SS_InternalExternalImpact__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_InternalExternalImpact__c</fullName>
    <label>Internal / External Impact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>External</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>