force-app/main/default/objects/Case/fields/PMC_SS_InvestigationSummary__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_InvestigationSummary__c</fullName>
    <label>Investigation Summary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>