force-app/main/default/objects/Case/fields/PMC_SS_Invoice__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice</label>
    <referenceTo>PMC_CPQ_Invoice__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>