force-app/main/default/objects/Case/fields/PMC_SS_InvoiceDifference__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_InvoiceDifference__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Invoice Delta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>