force-app/main/default/objects/Case/fields/PMC_SS_IsCaseOwnerManager__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_IsCaseOwnerManager__c</fullName>
    <formula>$User.Id = Owner:User.PMC_SS_DelegateUser__c &amp;&amp;  TODAY() &gt;=  Owner:User.PMC_SS_OutOfOfficeStartDate__c &amp;&amp;  TODAY() &lt;= Owner:User.PMC_SS_OutOfOfficeEndDate__c &amp;&amp;  NOT(ISBLANK(Owner:User.PMC_SS_OutOfOfficeStartDate__c)) &amp;&amp; NOT(ISBLANK(Owner:User.PMC_SS_OutOfOfficeEndDate__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Case Owner Manager</label>
    <type>Checkbox</type>
</CustomField>