force-app/main/default/objects/Case/fields/PMC_SS_IsProductUsable__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_IsProductUsable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Toggle box checked when product is accepted as usable by the customer with or without quality mitigation</description>
    <label>Is Product Usable?</label>
    <type>Checkbox</type>
</CustomField>